# ML_Algorithms_from_scratch

./: CMakeLists.txt
Dim Reduction/: lda.py  pca.py
basic/logistic_reg/: load_dataset.py  optimize.py  propagate.py  test.py
basic/logistic_reg_class/: LogisticReg.py  test.py
cpp/logistic_reg/: logistic_regression.cpp  logistic_regression.h
cpp/neural_network/: Net.cpp  Net.h  Neuron.cpp  Neuron.h  TraingData.cpp  TraingData.h
gmm/: gmm_1.py
logistic_reg/: logistic_regression.cpp  model.py  predict.py  test.py
logistic_reg_class/: LogisticReg.py
python/logistic_reg/: initialize_with_zeros.py  optimize.py  propagate.py  sigmoid.py
python/logistic_reg_class/: test.py
python/neural_net/: cs231_neural_net.py
python/utils/: ActivationFunction.py  Diagonal.py  Gradient_Checking_utils.py  Regularization_utils.py
supervised/DecisionTree/: DTree_explain.md  DecisionNode.py  DecisionTree.py  DecisionTreeClassify.py  SplitNode.py  utils.py
supervised/KNN/: KNN.py
supervised/Regression/: regression.py
supervised/Regression/tests/: test_linear.py
unsupervised/Association/: Rule.py  apriori.py
unsupervised/GAN/data/: load_datasets.py
unsupervised/GAN/others/papers/: papers.md
unsupervised/GAN/tasks/generate_human_faces/: Gan.py
unsupervised/GAN/tasks/image inpainting/: ContextEncoder.py
unsupervised/GAN/utils/: img_manipulation.py  visualize.py
unsupervised/GMM/: gmm_2.py
unsupervised/Kmeans/: kmeans.py
utils/: ActivationFunction.py  Normalize.py  Split.py  dim_reduction.py  util.py  utils.py  visualize.py
(+7 files in other folders)
